# backyardmonitor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEPLOY.md  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: deployed-badge.yml
bm/: analyzer.py  app.py  capture.py  cli.py  config.py  llm.py  storage.py  zones.py
bm/static/: index.html  significance.html  spot.html
bm/static/js/: index.js  significance.js  spot.js
scripts/: extract_js.py  format.sh  lint.sh  proxmox_lxc_bootstrap.sh  proxmox_lxc_uv_bootstrap.sh  style.sh  update_badge_gist.py
