[project]
name = "backyardmonitor"
version = "0.1.0"
description = "Simple gate + parking monitor (rewrite)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.23",
  "opencv-python-headless>=4.7",
  "numpy>=1.24",
  "openai>=1.0.0",
]

[project.scripts]
backyardmonitor = "bm.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bm"]

[tool.setuptools.package-data]
bm = [
  "static/*",
  "static/**/*",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\\.pyi?$"
exclude = """
(
  /(
      \\.venv
    | data
    | backyardmonitor\\.egg-info
    | build
    | dist
    | \\.git
  )/
)
"""

[dependency-groups]
dev = [
  "black>=24.8",
  "pyflakes>=3.2",
  "djlint>=1.34",
  "jsbeautifier>=1.15",
]

[tool.djlint]
profile = "html"
indent = 2
max_line_length = 88
include = ["bm/static/**/*.html", "bm/static/*.html"]
